kubernetes/apps/apps/karakeep/karakeep/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karakeep
  labels:
    app: karakeep
spec:
  type: ClusterIP
  selector:
    app: karakeep
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: karakeep-chrome
  labels:
    app: karakeep-chrome
spec:
  type: ClusterIP
  selector:
    app: karakeep-chrome
  ports:
    - name: chrome
      port: 9222
      targetPort: chrome
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: karakeep-meilisearch
  labels:
    app: karakeep-meilisearch
spec:
  type: ClusterIP
  selector:
    app: karakeep-meilisearch
  ports:
    - name: meilisearch
      port: 7700
      targetPort: meilisearch
      protocol: TCP
