kubernetes/apps/apps/karakeep/karakeep/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karakeep
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - karakeep.cloud.traunseenet.com
      secretName: karakeep-cert
  ingressClassName: traefik
  rules:
    - host: karakeep.cloud.traunseenet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karakeep
                port:
                  name: http
